# pets.py

./: CMakeLists.txt  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.py
examples/: basic_pet.py  new_animals.py
pets/: __init__.py  __init__.pyi  animal.cc  animal.h  bindings.cc  pet.cc  pet.h
pets/types/: __init__.pyi  animal.pyi  pet.pyi
